load("@gazelle//:def.bzl", "gazelle")

# Go configuration
# gazelle:prefix github.com/jfmatt/snapfold

# Proto configuration
# gazelle:proto default

# Map googleapis protos
# Format: gazelle:resolve <source-lang> <target-lang> <import> <label>
# gazelle:resolve proto proto google/type/money.proto @googleapis//google/type:money_proto
# gazelle:resolve proto go google/type/money.proto @googleapis//google/type:money_go_proto

gazelle(name = "gazelle")
