"""Multi-language Bazel project with Go and Rust."""

module(
    name = "snapfold",
    version = "0.1.0",
)

# Bazel dependencies
bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "rules_rust", version = "0.57.1")
bazel_dep(name = "rules_rust_prost", version = "0.57.1")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "protobuf", version = "33.2")
bazel_dep(name = "toolchains_protoc", version = "0.6.0")
bazel_dep(name = "googleapis", version = "0.0.0-20251211-05f65958")
bazel_dep(name = "googleapis-go", version = "1.0.0")
bazel_dep(name = "openssl", version = "3.3.1.bcr.9")

bazel_dep(name = "buildozer", version = "8.2.1", dev_dependency = True)

# Go SDK configuration
# We register both a host SDK and a downloaded SDK.
# Select between them using --@rules_go//go/toolchain:sdk_version=host (for local)
# or --@rules_go//go/toolchain:sdk_version=1.22.0 (for downloaded)
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")

# Register host Go installation (uses GOROOT or `go env GOROOT`)
go_sdk.host(name = "go_host")

# Register a specific downloaded version as fallback/CI option
go_sdk.download(
    name = "go_sdk",
    version = "1.24.2",
)

# Go dependencies from go.mod
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_jfmatt_gotest",
    "com_github_spf13_cobra",
    "org_golang_google_protobuf",  # Needed for go_features.proto (edition 2024) support
)

# Rust toolchain configuration
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(edition = "2021")
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

# Rust external dependencies from Cargo.toml
# Internal crates (rustlib, rustcli) are managed via BUILD.bazel files
crate = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = ["//:Cargo.toml"],
)

# Prost dependencies for protobuf support
crate.spec(
    package = "prost",
    version = "0.13.0",
)
crate.spec(
    default_features = False,
    package = "prost-types",
    version = "0.13.0",
)

# Protoc code generators - required for rust_prost_library
crate.spec(
    package = "protoc-gen-prost",
    version = "0.4",
)
crate.annotation(
    crate = "protoc-gen-prost",
    gen_binaries = ["protoc-gen-prost"],
)
crate.spec(
    package = "protoc-gen-tonic",
    version = "0.4",
)
crate.annotation(
    crate = "protoc-gen-tonic",
    gen_binaries = ["protoc-gen-tonic"],
)

# Tonic for gRPC support (optional)
crate.spec(
    features = ["transport"],
    package = "tonic",
    version = "0.12.0",
)

# OpenSSL annotation to fix build issues with openssl-sys
crate.annotation(
    build_script_data = ["@openssl//:gen_dir"],
    build_script_env = {
        "OPENSSL_NO_VENDOR": "1",
        "OPENSSL_LIB_DIR": "$(location @openssl//:gen_dir)/lib",
        "OPENSSL_INCLUDE_DIR": "$(location @openssl//:gen_dir)/include",
        "OPENSSL_STATIC": "1",
    },
    crate = "openssl-sys",
)
use_repo(crate, "crates")

# Make openssl repository visible to crate_universe
inject_repo(crate, "openssl")

# Register custom prost toolchain for Rust proto generation
register_toolchains("//build/prost_toolchain")
