load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "gamedef_proto",
    srcs = ["game.proto"],
    visibility = ["//visibility:public"],
    deps = ["//google/protobuf:protobuf_proto"],
)

go_proto_library(
    name = "gamedef_go_proto",
    importpath = "github.com/jfmatt/snapfold/gamedef",
    proto = ":gamedef_proto",
    visibility = ["//visibility:public"],
    deps = ["//google/protobuf:money_proto"],
)

go_library(
    name = "gamedef",
    embed = [":gamedef_go_proto"],
    importpath = "github.com/jfmatt/snapfold/gamedef",
    visibility = ["//visibility:public"],
)
