load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "rustlib",
    srcs = ["src/lib.rs"],
    edition = "2021",
    visibility = ["//visibility:public"],
    deps = [
        "//gamedef:gamedef_rust_proto",
    ],
)

rust_test(
    name = "rustlib_test",
    crate = ":rustlib",
    edition = "2021",
)
