load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cli_lib",
    srcs = ["main.go"],
    importpath = "github.com/jfmatt/snapfold/gocli/cmd/cli",
    visibility = ["//visibility:private"],
    deps = [
        "//gamedef",
        "//lib/greeting",
        "@com_github_spf13_cobra//:cobra",
    ],
)

go_binary(
    name = "cli",
    embed = [":cli_lib"],
    visibility = ["//visibility:public"],
)
